fix: :art: layout on mobile

--- a/components/App/Model.module.css
+++ b/components/App/Model.module.css
@@ -75,7 +75,6 @@
 
 .ModelItem {
   display: flex;
-  min-width: 450px;
   justify-content: center;
   gap: 5px;
   border: 1px solid #eee;
